--- a/camera.css
+++ b/camera.css
@@ -1,38 +1,272 @@
  .u-section-1 {
-  background-image: linear-gradient(#1a1a1a, black);
+  background-image: linear-gradient(#4c7397, #d9dee7);
 }
 
-.u-section-1 .u-custom-html-1 {
-  min-height: 845px;
-  height: auto;
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 100%;
+.u-section-1 .u-sheet-1 {
+  min-height: 790px;
+}
+
+.u-section-1 .u-text-1 {
+  margin: 35px auto 0;
+}
+
+.u-section-1 .u-gallery-1 {
+  width: 811px;
+  height: 623px;
+  grid-gap: 10px 10px;
+  margin: 35px auto 45px;
+}
+
+.u-section-1 .u-carousel-item-1 {
+  margin-right: 0;
+}
+
+.u-section-1 .u-over-slide-1 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-1 .u-carousel-item-2 {
+  margin-right: 0;
+}
+
+.u-section-1 .u-over-slide-2 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-1 .u-carousel-item-3 {
+  margin-right: 0;
+}
+
+.u-section-1 .u-over-slide-3 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-1 .u-carousel-item-4 {
+  margin-right: 0;
+}
+
+.u-section-1 .u-over-slide-4 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-1 .u-carousel-item-5 {
+  margin-right: 0;
+}
+
+.u-section-1 .u-over-slide-5 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-1 .u-carousel-item-6 {
+  margin-right: 0;
+}
+
+.u-section-1 .u-over-slide-6 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-1 .u-carousel-thumbnails-1 {
+  padding-top: 10px;
+}
+
+.u-section-1 .u-carousel-thumbnail-1 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-1 .u-carousel-thumbnail-2 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-1 .u-carousel-thumbnail-3 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-1 .u-carousel-thumbnail-4 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-1 .u-carousel-thumbnail-5 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-1 .u-carousel-thumbnail-6 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-1 .u-carousel-control-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.u-section-1 .u-carousel-control-2 {
+  position: absolute;
+  right: 10px;
+  width: 40px;
+  height: 40px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-custom-html-1 {
-    min-height: 625px;
-    margin-top: 65px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 775px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    margin-bottom: -232px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-custom-html-1 {
-    min-height: 525px;
-    margin-bottom: -20px;
+  .u-section-1 .u-gallery-1 {
+    width: 720px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-custom-html-1 {
-    min-height: 425px;
+  .u-section-1 .u-gallery-1 {
+    width: 540px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-1 {
+    width: 82px;
+    height: 82px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-2 {
+    width: 82px;
+    height: 82px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-3 {
+    width: 82px;
+    height: 82px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-4 {
+    width: 82px;
+    height: 82px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-5 {
+    width: 82px;
+    height: 82px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-6 {
+    width: 82px;
+    height: 82px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-custom-html-1 {
+  .u-section-1 .u-sheet-1 {
+    min-height: 741px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    margin-bottom: -266px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-1 {
+    width: 48px;
+    height: 48px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-2 {
+    width: 48px;
+    height: 48px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-3 {
+    width: 48px;
+    height: 48px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-4 {
+    width: 48px;
+    height: 48px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-5 {
+    width: 48px;
+    height: 48px;
+  }
+
+  .u-section-1 .u-carousel-thumbnail-6 {
+    width: 48px;
+    height: 48px;
+  }
+} .u-section-2 {
+  background-image: linear-gradient(#1a1a1a, black);
+  min-height: 782px;
+}
+
+.u-section-2 .u-custom-html-1 {
+  min-height: 817px;
+  height: auto;
+  margin-top: 35px;
+  margin-bottom: -70px;
+}
+
+@media (max-width: 1199px) {
+   .u-section-2 {
+    min-height: 660px;
+  }
+
+  .u-section-2 .u-custom-html-1 {
+    min-height: 625px;
+    margin-bottom: -182px;
+  }
+}
+
+@media (max-width: 991px) {
+   .u-section-2 {
+    min-height: 545px;
+  }
+
+  .u-section-2 .u-custom-html-1 {
+    min-height: 525px;
+    margin-top: 40px;
+    margin-bottom: -135px;
+  }
+}
+
+@media (max-width: 767px) {
+   .u-section-2 {
+    min-height: 420px;
+  }
+
+  .u-section-2 .u-custom-html-1 {
+    min-height: 425px;
+    margin-top: 25px;
+    margin-bottom: -160px;
+  }
+}
+
+@media (max-width: 575px) {
+   .u-section-2 {
+    min-height: 268px;
+  }
+
+  .u-section-2 .u-custom-html-1 {
     min-height: 325px;
-    margin-bottom: -120px;
+    margin-top: 5px;
+    margin-bottom: -62px;
   }
 }
